src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContentImage__c</fullName>
        <label>ContentImage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <label>Firm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indesit</fullName>
                </value>
                <value>
                    <fullName>LG</fullName>
                </value>
                <value>
                    <fullName>Hotpoint Ariston</fullName>
                </value>
                <value>
                    <fullName>Bosch</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Apple</fullName>
                </value>
                <value>
                    <fullName>Huawei</fullName>
                </value>
                <value>
                    <fullName>Asus</fullName>
                </value>
                <value>
                    <fullName>Acer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RAM__c</fullName>
        <label>RAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>64</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>The_country_of_manufacture__c</fullName>
        <label>The country of manufacture</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Russia</fullName>
                </value>
                <value>
                    <fullName>Ukraine</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compact</fullName>
                </value>
                <value>
                    <fullName>Narrow 32-47 cm</fullName>
                </value>
                <value>
                    <fullName>Full size 48-65 cm</fullName>
                </value>
                <value>
                    <fullName>Semiautomatic</fullName>
                </value>
                <value>
                    <fullName>Smartphone</fullName>
                </value>
                <value>
                    <fullName>Button telephone</fullName>
                </value>
                <value>
                    <fullName>2-SIM</fullName>
                </value>
                <value>
                    <fullName>Ultrabook</fullName>
                </value>
                <value>
                    <fullName>Netbook</fullName>
                </value>
                <value>
                    <fullName>Gaming notebook</fullName>
                </value>
                <value>
                    <fullName>Laptop+tablet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <recordTypes>
        <fullName>Laptop</fullName>
        <active>true</active>
        <label>Laptop</label>
    </recordTypes>
    <recordTypes>
        <fullName>Smartphone</fullName>
        <active>true</active>
        <label>Smartphone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Washing_machine</fullName>
        <active>true</active>
        <label>Washing machine</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>